fix overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,16 @@
   font-family: system-ui, "inter" -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* overflow: hidden; */
 }
-.home_container{
+.app_container{
   width: 100vw;
   height: 100vh;
   background: #1C1A24;
-  transition: all 5s ease-in-out;
+  overflow-x: hidden;
+}
+.home_container{
+ width: 100%;
+ height: 100%;
+  /* overflow-y: hidden; */
 }
 /* .logo {
   height: 4em;
@@ -31,7 +36,6 @@
 /* ***********************************************************trans syles ******************************************************/
 
 .tans_container{
-
   width: 100vw;
   height: 80vh;
   display: flex;
